packages/lodepng_flutter/lib/lodepng_flutter_bindings_generated.dart


  /// Same as lodepng_encode_memory, but always encodes from 24-bit RGB raw image.
  int lodepng_encode24(
    ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>> out,
    ffi.Pointer<ffi.Size> outsize,
    ffi.Pointer<ffi.UnsignedChar> image,
    int w,
    int h,
  ) {
    return _lodepng_encode24(
      out,
      outsize,
      image,
      w,
      h,
    );
  }

  late final _lodepng_encode24Ptr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(
              ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>>,
              ffi.Pointer<ffi.Size>,
              ffi.Pointer<ffi.UnsignedChar>,
              ffi.UnsignedInt,
              ffi.UnsignedInt)>>('lodepng_encode24');
  late final _lodepng_encode24 = _lodepng_encode24Ptr.asFunction<
      int Function(ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>>,
          ffi.Pointer<ffi.Size>, ffi.Pointer<ffi.UnsignedChar>, int, int)>();

  /// Converts raw pixel data into a PNG file on disk.
  /// Same as the other encode functions, but instead takes a filename as output.
  ///
  /// NOTE: This overwrites existing files without warning!
  ///
  /// NOTE: Wide-character filenames are not supported, you can use an external method
  /// to handle such files and encode in-memory.
  int lodepng_encode_file(
    ffi.Pointer<ffi.Char> filename,
    ffi.Pointer<ffi.UnsignedChar> image,
    int w,
    int h,
    int colortype,
    int bitdepth,
  ) {
    return _lodepng_encode_file(
      filename,
      image,
      w,
      h,
      colortype,
      bitdepth,
    );
  }

  late final _lodepng_encode_filePtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.UnsignedChar>,
              ffi.UnsignedInt,
              ffi.UnsignedInt,
              ffi.Int32,
              ffi.UnsignedInt)>>('lodepng_encode_file');
  late final _lodepng_encode_file = _lodepng_encode_filePtr.asFunction<
      int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.UnsignedChar>, int,
          int, int, int)>();

  /// Same as lodepng_encode_file, but always encodes from 32-bit RGBA raw image.
  ///
  /// NOTE: Wide-character filenames are not supported, you can use an external method
  /// to handle such files and encode in-memory.
  int lodepng_encode32_file(
    ffi.Pointer<ffi.Char> filename,
    ffi.Pointer<ffi.UnsignedChar> image,
    int w,
    int h,
  ) {
    return _lodepng_encode32_file(
      filename,
      image,
      w,
      h,
    );
  }

  late final _lodepng_encode32_filePtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.UnsignedChar>,
              ffi.UnsignedInt,
              ffi.UnsignedInt)>>('lodepng_encode32_file');
  late final _lodepng_encode32_file = _lodepng_encode32_filePtr.asFunction<
      int Function(
          ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.UnsignedChar>, int, int)>();

  /// Same as lodepng_encode_file, but always encodes from 24-bit RGB raw image.
  ///
  /// NOTE: Wide-character filenames are not supported, you can use an external method
  /// to handle such files and encode in-memory.
  int lodepng_encode24_file(
    ffi.Pointer<ffi.Char> filename,
    ffi.Pointer<ffi.UnsignedChar> image,
    int w,
    int h,
  ) {
    return _lodepng_encode24_file(
      filename,
      image,
      w,
      h,
    );
  }

  late final _lodepng_encode24_filePtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.UnsignedChar>,
              ffi.UnsignedInt,
              ffi.UnsignedInt)>>('lodepng_encode24_file');
  late final _lodepng_encode24_file = _lodepng_encode24_filePtr.asFunction<
      int Function(
          ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.UnsignedChar>, int, int)>();

  /// Returns an English description of the numerical error code.
  ffi.Pointer<ffi.Char> lodepng_error_text(
    int code,
  ) {
    return _lodepng_error_text(
      code,
    );
  }

  late final _lodepng_error_textPtr = _lookup<
          ffi.NativeFunction<ffi.Pointer<ffi.Char> Function(ffi.UnsignedInt)>>(
      'lodepng_error_text');
  late final _lodepng_error_text =
      _lodepng_error_textPtr.asFunction<ffi.Pointer<ffi.Char> Function(int)>();

  late final ffi.Pointer<LodePNGDecompressSettings>
      _lodepng_default_decompress_settings =
      _lookup<LodePNGDecompressSettings>('lodepng_default_decompress_settings');

  LodePNGDecompressSettings get lodepng_default_decompress_settings =>
      _lodepng_default_decompress_settings.ref;

  void lodepng_decompress_settings_init(
    ffi.Pointer<LodePNGDecompressSettings> settings,
  ) {
    return _lodepng_decompress_settings_init(
      settings,
    );
  }

  late final _lodepng_decompress_settings_initPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(ffi.Pointer<LodePNGDecompressSettings>)>>(
      'lodepng_decompress_settings_init');
  late final _lodepng_decompress_settings_init =
      _lodepng_decompress_settings_initPtr
          .asFunction<void Function(ffi.Pointer<LodePNGDecompressSettings>)>();

  late final ffi.Pointer<LodePNGCompressSettings>
      _lodepng_default_compress_settings =
      _lookup<LodePNGCompressSettings>('lodepng_default_compress_settings');

  LodePNGCompressSettings get lodepng_default_compress_settings =>
      _lodepng_default_compress_settings.ref;

  void lodepng_compress_settings_init(
    ffi.Pointer<LodePNGCompressSettings> settings,
  ) {
    return _lodepng_compress_settings_init(
      settings,
    );
  }

  late final _lodepng_compress_settings_initPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(ffi.Pointer<LodePNGCompressSettings>)>>(
      'lodepng_compress_settings_init');
  late final _lodepng_compress_settings_init =
      _lodepng_compress_settings_initPtr
          .asFunction<void Function(ffi.Pointer<LodePNGCompressSettings>)>();

  /// init, cleanup and copy functions to use with this struct
  void lodepng_color_mode_init(
    ffi.Pointer<LodePNGColorMode> info,
  ) {
    return _lodepng_color_mode_init(
      info,
    );
  }

  late final _lodepng_color_mode_initPtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(ffi.Pointer<LodePNGColorMode>)>>(
      'lodepng_color_mode_init');
  late final _lodepng_color_mode_init = _lodepng_color_mode_initPtr
      .asFunction<void Function(ffi.Pointer<LodePNGColorMode>)>();

  void lodepng_color_mode_cleanup(
    ffi.Pointer<LodePNGColorMode> info,
  ) {
    return _lodepng_color_mode_cleanup(
      info,
    );
  }

  late final _lodepng_color_mode_cleanupPtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(ffi.Pointer<LodePNGColorMode>)>>(
      'lodepng_color_mode_cleanup');
  late final _lodepng_color_mode_cleanup = _lodepng_color_mode_cleanupPtr
      .asFunction<void Function(ffi.Pointer<LodePNGColorMode>)>();

  /// return value is error code (0 means no error)
  int lodepng_color_mode_copy(
    ffi.Pointer<LodePNGColorMode> dest,
    ffi.Pointer<LodePNGColorMode> source,
  ) {
    return _lodepng_color_mode_copy(
      dest,
      source,
    );
  }

  late final _lodepng_color_mode_copyPtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(ffi.Pointer<LodePNGColorMode>,
              ffi.Pointer<LodePNGColorMode>)>>('lodepng_color_mode_copy');
  late final _lodepng_color_mode_copy = _lodepng_color_mode_copyPtr.asFunction<
      int Function(
          ffi.Pointer<LodePNGColorMode>, ffi.Pointer<LodePNGColorMode>)>();

  /// Makes a temporary LodePNGColorMode that does not need cleanup (no palette)
  LodePNGColorMode lodepng_color_mode_make(
    int colortype,
    int bitdepth,
  ) {
    return _lodepng_color_mode_make(
      colortype,
      bitdepth,
    );
  }

  late final _lodepng_color_mode_makePtr = _lookup<
      ffi.NativeFunction<
          LodePNGColorMode Function(
              ffi.Int32, ffi.UnsignedInt)>>('lodepng_color_mode_make');
  late final _lodepng_color_mode_make = _lodepng_color_mode_makePtr
      .asFunction<LodePNGColorMode Function(int, int)>();

  void lodepng_palette_clear(
    ffi.Pointer<LodePNGColorMode> info,
  ) {
    return _lodepng_palette_clear(
      info,
    );
  }

  late final _lodepng_palette_clearPtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(ffi.Pointer<LodePNGColorMode>)>>(
      'lodepng_palette_clear');
  late final _lodepng_palette_clear = _lodepng_palette_clearPtr
      .asFunction<void Function(ffi.Pointer<LodePNGColorMode>)>();

  /// add 1 color to the palette
  int lodepng_palette_add(
    ffi.Pointer<LodePNGColorMode> info,
    int r,
    int g,
    int b,
    int a,
  ) {
    return _lodepng_palette_add(
      info,
      r,
      g,
      b,
      a,
    );
  }

  late final _lodepng_palette_addPtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(
              ffi.Pointer<LodePNGColorMode>,
              ffi.UnsignedChar,
              ffi.UnsignedChar,
              ffi.UnsignedChar,
              ffi.UnsignedChar)>>('lodepng_palette_add');
  late final _lodepng_palette_add = _lodepng_palette_addPtr.asFunction<
      int Function(ffi.Pointer<LodePNGColorMode>, int, int, int, int)>();

  /// get the total amount of bits per pixel, based on colortype and bitdepth in the struct
  int lodepng_get_bpp(
    ffi.Pointer<LodePNGColorMode> info,
  ) {
    return _lodepng_get_bpp(
      info,
    );
  }

  late final _lodepng_get_bppPtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(
              ffi.Pointer<LodePNGColorMode>)>>('lodepng_get_bpp');
  late final _lodepng_get_bpp = _lodepng_get_bppPtr
      .asFunction<int Function(ffi.Pointer<LodePNGColorMode>)>();

  /// get the amount of color channels used, based on colortype in the struct.
  /// If a palette is used, it counts as 1 channel.
  int lodepng_get_channels(
    ffi.Pointer<LodePNGColorMode> info,
  ) {
    return _lodepng_get_channels(
      info,
    );
  }

  late final _lodepng_get_channelsPtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(
              ffi.Pointer<LodePNGColorMode>)>>('lodepng_get_channels');
  late final _lodepng_get_channels = _lodepng_get_channelsPtr
      .asFunction<int Function(ffi.Pointer<LodePNGColorMode>)>();

  /// is it a grayscale type? (only colortype 0 or 4)
  int lodepng_is_greyscale_type(
    ffi.Pointer<LodePNGColorMode> info,
  ) {
    return _lodepng_is_greyscale_type(
      info,
    );
  }

  late final _lodepng_is_greyscale_typePtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(
              ffi.Pointer<LodePNGColorMode>)>>('lodepng_is_greyscale_type');
  late final _lodepng_is_greyscale_type = _lodepng_is_greyscale_typePtr
      .asFunction<int Function(ffi.Pointer<LodePNGColorMode>)>();

  /// has it got an alpha channel? (only colortype 2 or 6)
  int lodepng_is_alpha_type(
    ffi.Pointer<LodePNGColorMode> info,
  ) {
    return _lodepng_is_alpha_type(
      info,
    );
  }

  late final _lodepng_is_alpha_typePtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(
              ffi.Pointer<LodePNGColorMode>)>>('lodepng_is_alpha_type');
  late final _lodepng_is_alpha_type = _lodepng_is_alpha_typePtr
      .asFunction<int Function(ffi.Pointer<LodePNGColorMode>)>();

  /// has it got a palette? (only colortype 3)
  int lodepng_is_palette_type(
    ffi.Pointer<LodePNGColorMode> info,
  ) {
    return _lodepng_is_palette_type(
      info,
    );
  }

  late final _lodepng_is_palette_typePtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(
              ffi.Pointer<LodePNGColorMode>)>>('lodepng_is_palette_type');
  late final _lodepng_is_palette_type = _lodepng_is_palette_typePtr
      .asFunction<int Function(ffi.Pointer<LodePNGColorMode>)>();
